	Fixed bug with numeric entity encoding not converting the first character in string.
	Fixed bug with new color picker not closing correctly some times.
	Fixed bug where FF was auto generating BR elements at the end of LI elements.
	Fixed bug where more colors link failed if the page had a base element in page.
	Fixed bug where link dialog produced error when importing CSS classes.
	Fixed so store/restore selection logic works in Opera and Safari (Nightly).
	Fixed problem where TinyMCE failed to initialized if used together with libraries like Scriptaculous.
Version 2.1.0 (2007-02-13)
	Added new template plugin, this supports simple snippets and advanced smart templates.
	Added new attributes dialog for xhtmlxtras plugin. Based on contribution by Ryan Demmer.
	Added new bbcode plugin, currently only support for PunBB but more might be added in the future.
	Added new support for table captions, captions can now be toggled on or off on tables.
	Added new more colors link for text/background color menus.
	Added new more advanced color picker based on a contribution by Tristan Poet.
	Added new functionality to always keep inlinepopups in viewable area contributed by Joshua T. Corbin.
	Added new maximize button for inlinepopups contributed by Joshua T. Corbin.
	Added new mceToggleEditor command. Toggles visibility of a editor instance on/off.
	Added new showInstance/hideInstance callbacks. Used by mceToggleEditor command.
	Added support for Ctrl+v handling for non IE browsers when the paste_auto_cleanup_on_paste option was used with the paste plugin.
	Fixed issue where focus wasn't returned to editor after using a inlinepopup. Contributed by Andy Skelton.
	Fixed issue where fullscreen.htm file used the _dev version of the JavaScript.
	Fixed issue with TinyMCE forcing absolute links for document local anchors. Ex: #a got converted into b.htm#a
	Fixed issue where initialization failed some times with Drupal.
	Fixed issue with rtl languages and the new color picker menus.