@@ -170,3 +170,7 @@
 	width: 22px;
 	height: 22px;
 }
+
+textarea {
+	height: 55px;
+}
