@@ -31,11 +31,11 @@
 						</tr>
 						<tr>
 							<td nowrap="nowrap"><label for="metakeywords">{$lang_fullpage_meta_keywords}</label>&nbsp;</td>
-							<td><textarea id="metakeywords" name="metakeywords" rows="3"></textarea></td>
+							<td><textarea id="metakeywords" name="metakeywords" rows="4"></textarea></td>
 						</tr>
 						<tr>
 							<td nowrap="nowrap"><label for="metadescription">{$lang_fullpage_meta_description}</label>&nbsp;</td>
-							<td><textarea id="metadescription" name="metadescription" rows="3"></textarea></td>
+							<td><textarea id="metadescription" name="metadescription" rows="4"></textarea></td>
 						</tr>
 						<tr>
 							<td nowrap="nowrap"><label for="metaauthor">{$lang_fullpage_author}</label>&nbsp;</td>
